[gd_scene load_steps=2 format=3 uid="uid://d0h8fdqhu1akt"]

[ext_resource type="Script" uid="uid://ctr2m6ablf3ya" path="res://Collections/c_Root/Root.gd" id="1_6usk6"]

[node name="nde_Root" type="Node"]
script = ExtResource("1_6usk6")

[node name="cvl2_Gameplay" type="CanvasLayer" parent="."]

[node name="svc2_Gameplay" type="SubViewportContainer" parent="cvl2_Gameplay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="svp2_Gameplay" type="SubViewport" parent="cvl2_Gameplay/svc2_Gameplay"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
physics_object_picking = true
size = Vector2i(1280, 720)
size_2d_override = Vector2i(320, 180)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="ctr2_Menus" type="Control" parent="cvl2_Gameplay"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
